--- a/app/views/notification_mailer/status_change.html.haml
+++ b/app/views/notification_mailer/status_change.html.haml
@@ -9,7 +9,7 @@
 
   .row
     %p.subhead-1
-      %strong= @user.fullname
+      %strong= @presenter.user.fullname
       has changed status of recruit:
 
     %h3.title
