Email templates adjustments

--- a/app/views/layouts/mailer.html.haml
+++ b/app/views/layouts/mailer.html.haml
@@ -5,13 +5,13 @@
 
     :css
       html {
-        font-size: 75%;
+        font-size: 100%;
       }
 
       body {
         background-color: #fafafa;
         font-family: Helvetica, sans-serif;
-        font-size: 1rem;
+        font-size: 10px;
         padding: 0;
         margin: 0;
         width: 100%;
@@ -22,94 +22,94 @@
       }
 
       p {
-        margin-bottom: .25rem;
+        margin-bottom: 3px;
       }
 
       .display-1 {
-        font-size: 3.4rem;
-        line-height: 4rem;
-        letter-spacing: 0rem;
+        font-size: 34px;
+        line-height: 40px;
+        letter-spacing: 0;
         font-weight: 300;
         text-transform: inherit;
       }
 
       .headline {
-        font-size: 2.4rem;
-        line-height: 3.2rem;
-        letter-spacing: 0rem;
+        font-size: 24px;
+        line-height: 32px;
+        letter-spacing: 0;
         font-weight: 300;
         text-transform: inherit;
       }
 
       .title {
-        font-size: 2rem;
-        line-height: 2.8rem;
-        letter-spacing: 0.005rem;
+        font-size: 20px;
+        line-height: 28px;
+        letter-spacing: 0.05px;
         font-weight: 400;
         text-transform: inherit;
       }
 
       .subhead-2 {
-        font-size: 1.5rem;
-        line-height: 2.8rem;
-        letter-spacing: 0.01rem;
+        font-size: 15px;
+        line-height: 28px;
+        letter-spacing: 0.1px;
         font-weight: 400;
         text-transform: inherit;
       }
 
       .subhead-1 {
-        font-size: 1.5rem;
-        line-height: 2.4rem;
-        letter-spacing: 0.01rem;
+        font-size: 15px;
+        line-height: 24px;
+        letter-spacing: 0.1px;
         font-weight: 300;
         text-transform: inherit;
       }
 
       .body-2 {
-        font-size: 1.3rem;
-        line-height: 2.4rem;
-        letter-spacing: 0.01rem;
+        font-size: 13px;
+        line-height: 24px;
+        letter-spacing: 0.1px;
         font-weight: 400;
         text-transform: inherit;
       }
 
       .body-1 {
-        font-size: 1.3rem;
-        line-height: 2rem;
-        letter-spacing: 0.01rem;
+        font-size: 13px;
+        line-height: 20px;
+        letter-spacing: 0.1px;
         font-weight: 300;
         text-transform: inherit;
       }
 
       .caption {
-        font-size: 1.2rem;
-        line-height: 2rem;
-        letter-spacing: 0.02rem;
+        font-size: 12px;
+        line-height: 20px;
+        letter-spacing: 0.2px;
         font-weight: 300;
         color: gray;
         text-transform: inherit;
       }
 
       .label {
-        font-size: 1.2rem;
-        line-height: 2rem;
-        letter-spacing: 0.01rem;
+        font-size: 12px;
+        line-height: 20px;
+        letter-spacing: 0.1px;
         font-weight: 300;
         text-transform: inherit;
       }
 
       .menu {
-        font-size: 1.3rem;
-        line-height: 2rem;
-        letter-spacing: 0.01rem;
+        font-size: 13px;
+        line-height: 20px;
+        letter-spacing: 0.1px;
         font-weight: 400;
         text-transform: inherit;
       }
 
       .button {
-        font-size: 1.4rem;
-        line-height: 2rem;
-        letter-spacing: 0.01rem;
+        font-size: 14px;
+        line-height: 20px;
+        letter-spacing: 0.1px;
         font-weight: 400;
         text-transform: uppercase;
       }
@@ -127,26 +127,26 @@
         display: inline-block;
         background: lightgray;
         color: white;
-        padding: 0 .9rem;
+        padding: 0 9px;
         border-radius: 4px;
-        font-size: 1rem;
+        font-size: 10px;
       }
 
       .container {
         background-color: white;
-        max-width: 72rem;
+        max-width: 720px;
         margin: 0 auto;
-        padding: 1.6rem 0;
+        padding: 16px 0;
         text-align: center;
       }
 
       .row {
-        padding: 0 1.6rem;
-        margin: 1.6rem 0;
+        padding: 0 16px;
+        margin: 16px 0;
       }
 
       .logo {
-        width: 20rem;
+        width: 200px;
         margin: 0 auto;
       }
 
