--- a/app/views/notification_mailer/evaluator_assignment.html.haml
+++ b/app/views/notification_mailer/evaluator_assignment.html.haml
@@ -23,6 +23,7 @@
       %strong= @presenter.recruit_document.position
       position
 
+  .row
     %p.body-2
       Current Status &raquo;
       %span.chip{ style: "background: #{@presenter.status.color};" }= @presenter.status.label
