Fix anchor styling inside emails

--- a/app/views/layouts/mailer.html.haml
+++ b/app/views/layouts/mailer.html.haml
@@ -160,7 +160,7 @@
         background-color: #4169E1;
         border: none;
         border-radius: 2px;
-        color: white;
+        color: white !important;
         display: inline-block;
         font-size: 14px;
         height: 36px;
